--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -27,10 +27,10 @@ scrape_configs:
           service: 'prometheus'
 
   # VPN Go Application metrics
-  - job_name: 'vpn-go-app'
+  - job_name: 'vpn-app'
     scrape_interval: 10s
     static_configs:
-      - targets: ['go-app:8080']
+      - targets: ['app:8080']
         labels:
           service: 'vpn-service'
           component: 'api'
