--- a/xray/config.json
+++ b/xray/config.json
@@ -47,10 +47,10 @@
         "security": "reality",
         "realitySettings": {
           "show": false,
-          "dest": "www.google.com:443",
+          "dest": "eh.vk.com:443",
           "xver": 0,
           "serverNames": [
-            "www.google.com"
+            "eh.vk.com"
           ],
           "privateKey": "GENERATE_YOUR_PRIVATE_KEY_HERE",
           "shortIds": [
@@ -61,7 +61,7 @@
         "xhttpSettings": {
           "mode": "auto",
           "path": "/xhttp",
-          "host": "www.google.com"
+          "host": "eh.vk.com"
         }
       },
       "sniffing": {
