--- a/xray/config.json
+++ b/xray/config.json
@@ -65,11 +65,7 @@
         }
       },
       "sniffing": {
-        "enabled": true,
-        "destOverride": [
-          "http",
-          "tls"
-        ]
+        "enabled": false
       }
     },
     {
@@ -95,6 +91,7 @@
     }
   ],
   "routing": {
+    "domainStrategy": "AsIs",
     "rules": [
       {
         "type": "field",
@@ -109,6 +106,11 @@
           "bittorrent"
         ],
         "outboundTag": "block"
+      },
+      {
+        "type": "field",
+        "network": "tcp,udp",
+        "outboundTag": "direct"
       }
     ]
   }
