--- a/grafana/datasources/datasource.yml
+++ b/grafana/datasources/datasource.yml
@@ -11,3 +11,11 @@ datasources:
       timeInterval: 15s
     editable: true
 
+  - name: Loki
+    type: loki
+    access: proxy
+    url: http://loki:3100
+    jsonData:
+      maxLines: 1000
+    editable: true
+
