--- a/promtail/promtail-config.yml
+++ b/promtail/promtail-config.yml
@@ -13,6 +13,7 @@ scrape_configs:
   - job_name: docker
     docker_sd_configs:
       - host: unix:///var/run/docker.sock
+        api_version: "1.44"
         refresh_interval: 5s
     relabel_configs:
       # Only collect logs from vpn-app container
